refs #72 - add shipmentLine api prototype
